--- a/web-app/src/main/resources/templates/index.html
+++ b/web-app/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-  <title>Thymeleafexamples - Spring security</title>
+  <title>Home Page</title>
   <meta charset="utf-8" />
 </head>
 <body>
