--- a/auth-server/src/main/resources/templates/login.html
+++ b/auth-server/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <h1>Login page</h1>
 <p th:if="${#httpServletRequest.getParameter('error')}" class="error">Wrong user or password</p>
 <form th:action="@{/login}" method="post">
-  <label for="username">Usernames</label>:
+  <label for="username">Username</label>:
   <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
   <label for="password">Password</label>:
   <input type="password" id="password" name="password" /> <br />
