--- a/web-app/src/main/resources/templates/index.html
+++ b/web-app/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 
   Logged user: <span sec:authentication="name">Bob</span> |
   Roles: <span sec:authentication="authorities">[ROLE_USER, ROLE_ADMIN]</span> |
-  <a href="index.html" th:href="@{/j_spring_security_logout}">Logout</a>
+  <a href="index.html" th:href="@{/logout}">Logout</a>
 </div>
 <h1>Home Page</h1>
 <p>This page is for any authenticated user.</p>
